--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "semantic-ui-react": "^1.1.1",
     "styled-components": "^5.1.1"
   },
